--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -59,6 +59,10 @@
   font-family: var(--hanken-grotesk);
 }
 
+header {
+  display: none;
+}
+
 main {
   background-color: var(--secondary-white);
 }
@@ -237,6 +241,14 @@ main {
 }
 
 @media screen and (min-width: 768px) {
+  header {
+    width: 100%;
+    margin: 1em;
+    display: inline-block;
+
+    text-align: center;
+    font-weight: 800;
+  }
   .main {
     
     display: flex;
@@ -245,8 +257,8 @@ main {
   }
 
   .summary {
-    min-width: 30vw;
-    max-width: 35vw;
+    min-width: 40vw;
+    max-width: 50vw;
     margin: 10em 10em;
     border-radius: 2em;
     box-shadow: 5px 5px 15px var(--secondary-gray-blue-t2);
