--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -244,7 +244,7 @@ main {
   header {
     width: 100%;
     margin: 1em;
-    display: inline-block;
+    display: none;
 
     text-align: center;
     font-weight: 800;
