--- a/src/App.scss
+++ b/src/App.scss
@@ -174,6 +174,28 @@
 
 }
 
+.invalid {
+  flex-direction: column;
+
+  input {
+    background: url("./images/icon-error.svg");
+    background-repeat: no-repeat;
+    background-position: 95% 50%;
+    
+    color: red;
+
+    border: 1.5px solid red  !important;
+  }
+
+  p {
+    padding-top: 5px;
+    align-self: flex-end;
+    font-size: 12px;
+    color: red;
+    font-style: italic;
+  }
+}
+
 .app__signup-btn {
   width: 100%;
   display: flex;
