add final adjustment

--- a/src/App.scss
+++ b/src/App.scss
@@ -105,7 +105,7 @@
   align-items: center;
 
   background: var(--secondary-color-blue);
-  box-shadow:  0 8px 0 var(--gray-blue-t);
+  box-shadow:  0 8px 0 var(--dark-blue-30);
 
   a {
     flex: 1;
@@ -135,7 +135,7 @@
   padding: 1rem;
   border: none;
   border-radius: 10px;
-  box-shadow: 0 8px 0 var(--gray-blue-t);
+  box-shadow: 0 8px 0 var(--dark-blue-30);
 
   div {
     flex: 1;
@@ -215,8 +215,8 @@
     font-weight: 600;
     letter-spacing: 1px;
     text-transform: uppercase;
-    background: var(--primary-color-green);
-    box-shadow: 0 5px 0 var(--primary-color-green-t);
+    background: var(--primary-color-green-t);
+    box-shadow: 0 3px 0 var(--primary-color-green);
 
     @media screen and (min-width: 376px) {
       font-size: 16px;
@@ -226,7 +226,7 @@
       cursor: pointer;
 
       &:hover {
-        background: var(--primary-color-green-t);
+        background: var(--primary-color-green-t70);
       }
     }
   }
