--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap");
+
+:root {
+  --font-fam: "Inter", sans-serif;
+
+  --primary-col-orange: hsl(35, 77%, 62%);
+  --primary-col-red: hsl(5, 85%, 63%);
+
+  --secondary-col-white: hsl(36, 100%, 99%);
+  --secondary-col-blue: hsl(233, 8%, 79%);
+  --secondary-col--grayblue: hsl(236, 13%, 42%);
+  --secondary-col-darkblue: hsl(240, 100%, 5%);
+
+  --mobile-size: 375px;
+  --desktop-size: 1440px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
