--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,15 +1,16 @@
 .app__navbar {
   width: 100%;
-  margin-bottom: 2rem;
-  background: var(--primary-white);
-  
+  padding: 1rem 2rem 0 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-
   position: fixed;
   z-index: 2;
+
+  @media screen and (min-width: 376px) {
+    padding: 2rem 3rem 2rem 2rem ;
+  }
 }
 
 .app__navbar-logo {
@@ -24,7 +25,40 @@
   }
 }
 
+.app__navbar-links {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  list-style: none;
+
+  li {
+    margin: 0 1.5rem;
+    cursor: pointer;
+
+    a {
+      color: var(--secondary-col-gray);
+      text-decoration: none;
+      text-transform: capitalize;
+      font-family: var(--font-fam);
+      opacity: 0.8;
+      font-size: 15px;
+      font-weight: 400;
+    }
+
+  }
+
+  @media screen and (max-width :900px) {
+    display: none;
+  }
+
+}
+
 .app__navbar-mobile {
+
+  width: 35px;
+  height: 35px;
 
   display: flex;
   flex-direction: column;
@@ -32,5 +66,79 @@
   align-items: center;
 
   position: relative;
+
+  img {
+    width: 100%;
+  }
+
+  div {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 5;
+
+    padding: 1rem;
+    width: 70%;
+    height: 100vh;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+
+    background: var(--secondary-col-white);
+    
+
+    img {
+      width: 35px;
+      height: 35px;
+      margin: 1rem 1rem 0 0; 
+
+      @media screen and (min-width : 376px) {
+        margin: 2.5rem 2rem 0 0;
+      }
+
+    }
+
+    ul {
+      list-style: none;
+      margin: 4rem 0 0 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      flex-direction: column;
+
+      li {
+        margin: 0.9rem;
+        @media screen and (min-width : 376px) {
+          margin: 1.2rem;
+        }
+
+        a {
+          font-family: var(--font-fam);
+          text-decoration: none;
+          color: #000;
+          font-size: 1.2rem;
+          font-weight: 400;
+          text-transform: capitalize;
+          transition: all 0.3s ease-in-out;
+          @media screen and (min-width : 376px) {
+            font-size: 1.5rem;
+          }
+        }
+      }
+    }
+
+
+  }
+
+  @media screen and (min-width : 900px ) {
+    display: none;
+  }
 
 }
